--- a/registry/package.json
+++ b/registry/package.json
@@ -1,10 +1,14 @@
 {
     "name": "beta-parity-react",
-    "version": "0.0.1",
+    "version": "0.0.7",
     "description": "Parity React Components",
     "main": "ui/index.js",
     "scripts": {
-        "build": "tsc --project tsconfig.lib.json && npx babel src/components --out-dir dist --extensions \".ts,.tsx\" && npx postcss src/components/**/*.css --base src/components --dir dist"
+        "build": "npm run delete:ui && npm run build:ui",
+        "publish": "npm run publish:lib",
+        "delete:ui": "rmdir /s /q ui",
+        "build:ui": "tsc --project tsconfig.lib.json && npx babel src/components --out-dir ui --extensions \".ts,.tsx\" && npx postcss src/components/**/*.css --base src/components --dir ui",
+        "publish:lib": "npm run build && npm publish"
     },
     "keywords": [
         "react",
@@ -15,10 +19,9 @@
     "license": "ISC",
     "dependencies": {
         "@radix-ui/react-accordion": "^1.1.2",
-        "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-slot": "^1.0.2",
-        "beta-parity-react": "file:..",
         "classnames": "^2.5.1",
+        "lucide-react": "^0.379.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
