--- a/registry/tsconfig.lib.json
+++ b/registry/tsconfig.lib.json
@@ -2,7 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
       "declaration": true,
-      "outDir": "dist",
+      "outDir": "ui",
       "noEmit": false, 
       "emitDeclarationOnly": true,
       "declarationMap": true
