--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "npm run build:lib && next build",
     "start": "next start",
     "lint": "next lint",
-    "dev:lib": "npm run dev --prefix registry",
     "install:lib": "npm run install:package --prefix registry",
-    "build:lib": "npm run build --prefix registry"
+    "dev:lib": "npm run dev --prefix registry",
+    "dev:storybook": "npm run dev:storybook --prefix registry",
+    "build:lib": "npm run build --prefix registry",
+    "build:storybook": "npm run build:storybook --prefix registry"
   },
   "dependencies": {
     "next": "14.2.3",
