--- a/registry/package.json
+++ b/registry/package.json
@@ -16,7 +16,9 @@
     "build:ts": "tsc --project tsconfig.lib.json",
     "build:ui": "npm run build:postcss && npm run build:ts && npm run build:babel",
     "install:package": "npm install",
-    "publish:lib": "npm run build && npm publish"
+    "publish:lib": "npm run build && npm publish",
+    "dev:storybook": "storybook dev -p 6006",
+    "build:storybook": "storybook build"
   },
   "keywords": [
     "react",
@@ -40,6 +42,16 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
+    "@chromatic-com/storybook": "^1.5.0",
+    "@storybook/addon-essentials": "^8.1.4",
+    "@storybook/addon-interactions": "^8.1.4",
+    "@storybook/addon-links": "^8.1.4",
+    "@storybook/addon-onboarding": "^8.1.4",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
+    "@storybook/blocks": "^8.1.4",
+    "@storybook/react": "^8.1.4",
+    "@storybook/react-webpack5": "^8.1.4",
+    "@storybook/test": "^8.1.4",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
@@ -52,6 +64,7 @@
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^6.0.1",
+    "storybook": "^8.1.4",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
