--- a/registry/tsconfig.lib.json
+++ b/registry/tsconfig.lib.json
@@ -7,6 +7,7 @@
       "emitDeclarationOnly": true,
       "declarationMap": true
     },
+    "exclude": ["src/stories"],
     "include": ["src"]
   }
   
