--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npm run build:lib && next build",
     "start": "next start",
     "lint": "next lint",
+    "install:packages": "npm install && npm run install:lib",
     "install:lib": "npm run install:package --prefix registry",
     "dev:lib": "npm run dev --prefix registry",
     "dev:storybook": "npm run dev:storybook --prefix registry",
