--- a/registry/package.json
+++ b/registry/package.json
@@ -52,6 +52,7 @@
     "@storybook/react": "^8.1.4",
     "@storybook/react-webpack5": "^8.1.4",
     "@storybook/test": "^8.1.4",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
