--- a/registry/package.json
+++ b/registry/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
     "@chromatic-com/storybook": "^1.5.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@storybook/addon-essentials": "^8.1.4",
     "@storybook/addon-interactions": "^8.1.4",
     "@storybook/addon-links": "^8.1.4",
