--- a/registry/package.json
+++ b/registry/package.json
@@ -34,7 +34,8 @@
     "classnames": "^2.5.1",
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-number-format": "^5.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
