--- a/registry/package.json
+++ b/registry/package.json
@@ -32,9 +32,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "beta-parity-react": "file:",
     "classnames": "^2.5.1",
+    "flatpickr": "^4.6.13",
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flatpickr": "^3.10.13",
     "react-number-format": "^5.4.0"
   },
   "devDependencies": {
@@ -57,6 +59,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/react-flatpickr": "^3.8.11",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "babel-plugin-module-resolver": "^5.0.2",
