--- a/registry/package.json
+++ b/registry/package.json
@@ -5,7 +5,7 @@
   "main": "ui/index.js",
   "scripts": {
     "dev": "npm run delete:ui && concurrently \"npm run dev:postcss\" \"npm run dev:babel\" \"npm run dev:ts\"",
-    "build": "npm run delete:ui && npm run build:ui",
+    "build": "npm run build:ui",
     "publish": "npm run publish:lib",
     "delete:ui": "if exist ui (rmdir /s /q ui)",
     "dev:postcss": "npx postcss src/components/**/*.css --base src/components --dir ui --watch",
