--- a/registry/package.json
+++ b/registry/package.json
@@ -28,8 +28,7 @@
   "author": "Bitas Labs",
   "license": "ISC",
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@floating-ui/react": "^0.26.20",
     "beta-parity-react": "file:",
     "classnames": "^2.5.1",
     "flatpickr": "^4.6.13",
