--- a/registry/package.json
+++ b/registry/package.json
@@ -4,7 +4,7 @@
   "description": "Parity React Components",
   "main": "ui/index.js",
   "scripts": {
-    "dev": "npm run delete:ui && concurrently \"npm run dev:postcss\" \"npm run dev:babel\" \"npm run dev:ts\"",
+    "dev": "npm run delete:ui && npm run postinstall && concurrently \"npm run dev:postcss\" \"npm run dev:babel\" \"npm run dev:ts\"",
     "build": "npm run build:ui",
     "publish": "npm run publish:lib",
     "delete:ui": "if exist ui (rmdir /s /q ui) || [ -d ui ] && rm -rf ui",
@@ -14,11 +14,12 @@
     "build:postcss": "npx postcss src/components/**/*.css --base src/components --dir ui",
     "build:babel": "npx babel src/components --out-dir ui --extensions \".ts,.tsx\"",
     "build:ts": "tsc --project tsconfig.lib.json",
-    "build:ui": "npm run build:postcss && npm run build:ts && npm run build:babel",
+    "build:ui": "npm run postinstall && npm run build:postcss && npm run build:ts && npm run build:babel",
     "install:package": "npm install",
     "publish:lib": "npm run build && npm publish",
     "dev:storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build"
+    "build:storybook": "storybook build",
+    "postinstall": "patch-package"
   },
   "keywords": [
     "react",
@@ -65,10 +66,12 @@
     "concurrently": "^8.2.2",
     "css-loader": "^7.1.1",
     "cssnano": "^7.0.1",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^6.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "storybook": "^8.1.4",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.3",
