--- a/registry/package.json
+++ b/registry/package.json
@@ -11,7 +11,7 @@
     "dev:postcss": "npx postcss src/components/**/*.css --base src/components --dir ui --watch",
     "dev:babel": "npx babel src/components --out-dir ui --extensions \".ts,.tsx\" --watch",
     "dev:ts": "tsc --project tsconfig.lib.json --watch",
-    "build:postcss": "npx postcss src/components/**/*.css --base src/components --dir ui",
+    "build:postcss": "cross-env NODE_ENV=production npx postcss src/components/**/*.css --base src/components --dir ui",
     "build:babel": "npx babel src/components --out-dir ui --extensions \".ts,.tsx\"",
     "build:ts": "tsc --project tsconfig.lib.json",
     "build:ui": "npm run postinstall && npm run build:postcss && npm run build:ts && npm run build:babel",
@@ -65,6 +65,7 @@
     "babel-loader": "^9.1.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.1",
     "cssnano": "^7.0.1",
     "patch-package": "^8.0.0",
