--- a/registry/.babelrc
+++ b/registry/.babelrc
@@ -1,16 +1,23 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-typescript", ["@babel/preset-react", { "runtime": "automatic" }]],
-    "plugins": [
-      [
-        "module-resolver",
-        {
-          "root": ["./src"],
-          "alias": {
-            "~components": "./src/components",
-            "~styles": "./src/styles"
-          }
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-typescript",
+    ["@babel/preset-react", { "runtime": "automatic" }]
+  ],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "root": ["./src"],
+        "alias": {
+          "~components": "./src/components",
+          "~styles": "./src/styles"
         }
-      ]
+      }
     ]
-  }
-  
+  ],
+  "highlightCode": false,
+  "comments": false,
+  "compact": true,
+  "minified": true
+}
