--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@": ["./*"],
       "@components/*": ["./src/components/*"],
+      "@public/*": ["./public/*"],
       "@libComponents/*": ["./registry/ui/*"],
     }
   },
