--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@components/*": ["./src/components/*"],
       "@public/*": ["./public/*"],
       "@libComponents/*": ["./registry/ui/*"],
+      "@ui/*": ["./registry/ui/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
