--- a/registry/tsconfig.lib.json
+++ b/registry/tsconfig.lib.json
@@ -7,9 +7,7 @@
     "emitDeclarationOnly": true,
     "declarationMap": true,
     "sourceMap": true,
-    "paths": {
-      "@ui/*": ["src/components/*"],
-    }
+    "paths": {}
   },
   "include": ["src/components"]
 }
