--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "build:lib": "npm run build --prefix registry"
   },
   "dependencies": {
-    "beta-parity-react": "file:registry",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.3",
     "@types/mdx": "^2.0.13",
+    "beta-parity-react": "file:registry",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "rehype-highlight": "^7.0.1",
+    "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5"
