fix (pagination): fix width, hover of menuitem, script

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "install:packages": "cd registry && npm install && npm run build && cd .. && npm install",
-    "install:lib": "cd registry && npm install",
-    "dev:lib": "cd registry && npm run dev:all",
-    "build:lib": "cd registry && npm run build"
+    "install:packages": "npm run install:lib && npm run build:lib && npm install",
+    "install:lib": "npm install --prefix registry",
+    "dev:lib": "npm run dev:all --prefix registry",
+    "build:lib": "npm run build:ui --prefix registry"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
