--- a/registry/package.json
+++ b/registry/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.26.20",
     "beta-parity-react": "file:",
+    "beta-parity-react-web": "file:..",
     "classnames": "^2.5.1",
     "flatpickr": "^4.6.13",
     "lucide-react": "^0.379.0",
