test (doc): accordion

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev --port 3005",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3005",
     "lint": "next lint",
     "install:packages": "npm run install:lib && npm run build:lib && npm install",
     "install:lib": "npm install --prefix registry",
@@ -23,6 +23,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.1",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
