--- a/registry/package.json
+++ b/registry/package.json
@@ -18,7 +18,11 @@
     "build:postcss": "cross-env NODE_ENV=production npx postcss src/components/**/*.css --base src/components --dir ui",
     "build:babel": "npx babel src/components --out-dir ui --extensions \".ts,.tsx\"",
     "build:ts": "tsc --project tsconfig.lib.json",
-    "build:ts-alias": "tsc-alias --project tsconfig.lib.json"
+    "build:ts-alias": "tsc-alias --project tsconfig.lib.json",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "generate:test": "node scripts/test-utils/generate-test.js"
   },
   "keywords": [
     "parity",
@@ -48,6 +52,10 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@types/react-flatpickr": "^3.8.11",
@@ -58,6 +66,10 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.1",
     "cssnano": "^7.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-css": "^6.0.2",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
