--- a/registry/package.json
+++ b/registry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beta-parity-react",
-  "version": "0.1.8",
+  "version": "0.2.0",
   "description": "Parity React Components",
   "main": "ui/index.js",
   "scripts": {
@@ -39,7 +39,8 @@
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
     "react-number-format": "^5.4.3",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
