--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parity-react-web",
+  "name": "beta-parity-react-web",
   "version": "0.1.1",
   "private": true,
   "type": "module",
