--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       "beta-parity-react/*": ["./registry/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "out/types/**/*.ts"],
   "exclude": ["node_modules", "registry"]
 }
