--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 env:
   GITHUB_PAGE_ENV: production
+  NEXT_PUBLIC_API_URL: https://nhanbitas.github.io/beta-parity-react
 
 permissions:
   contents: read
