--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 env:
   GITHUB_PAGE_ENV: production
-  NEXT_PUBLIC_API_URL: https://nhanbitas.github.io/beta-parity-react
+  NEXT_PUBLIC_BASE_URL: https://nhanbitas.github.io/beta-parity-react
 
 permissions:
   contents: read
@@ -35,7 +35,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Set environment variables
-        run: echo "NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" >> $GITHUB_ENV
+        run: echo "NEXT_PUBLIC_BASE_URL=${{ secrets.NEXT_PUBLIC_BASE_URL }}" >> $GITHUB_ENV
 
       - name: Install and Build Parity React
         run: cd registry && npm install && npm run build && cd ..
