fix: update build script to set environment variables for production

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --port 3005",
-    "build": "next build",
+    "build": "set NEXT_PUBLIC_VERCEL_ENV=production && next build",
+    "build:out": "set GITHUB_PAGE_ENV=production && next build",
     "start": "next start --port 3005",
     "preview": "npx serve out -l 3005",
     "lint": "next lint",
