--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm install
 
       - name: Build Next.js app
-        run: npm run build
+        run: npm run build:out
 
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v4
