fix: update environment variable handling and add cross-env for script compatibility

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --port 3005",
-    "build": "set NEXT_PUBLIC_VERCEL_ENV=production && next build",
-    "build:out": "set GITHUB_PAGE_ENV=production && next build",
-    "start": "next start --port 3005",
+    "dev": "cross-env NEXT_PUBLIC_VERCEL_ENV=development next dev --port 3005",
+    "build": "cross-env NEXT_PUBLIC_VERCEL_ENV=production next build",
+    "build:out": "next build",
+    "start": "cross-env NEXT_PUBLIC_VERCEL_ENV=production next start --port 3005",
     "preview": "npx serve out -l 3005",
     "lint": "next lint",
     "install:packages": "npm run install:lib && npm run build:lib && npm install",
@@ -35,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
